--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><%= link_to "Profile", current_user %></li>
-                            <li><%= link_to "Settings", '#' %></li>
+                            <li><%= link_to "Settings", edit_user_path(current_user) %></li>
                             <li class="divider"></li>
                             <li>
                                 <%= link_to "Sign out", signout_path, :method => "delete" %>
@@ -20,7 +20,7 @@
                         </ul>
                     </li>
                 <% else %>
-                    <li><%= link_to "Sign in", '#' %></li>
+                    <li><%= link_to "Sign in", '/signin' %></li>
                 <% end %>
             </ul>
         </nav>
